--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,87 +1,62 @@
-aiohttp==3.9.3
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-cryptography==42.0.5
-dataclasses-json==0.6.7
-distro==1.9.0
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
-fastapi==0.111.0
-fastapi-cli==0.0.7
-frozenlist==1.7.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.27.0
-idna==3.10
-iniconfig==2.1.0
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.1.17
-langchain-community==0.0.38
-langchain-core==0.1.53
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.2
-langsmith==0.1.17
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-mdurl==0.1.2
-multidict==6.4.4
-mypy_extensions==1.1.0
-numpy==1.26.4
-openai==1.86.0
-orjson==3.10.18
-packaging==23.2
-pluggy==1.6.0
-prometheus_client==0.22.1
-propcache==0.3.2
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.7.1
-pydantic-settings==2.2.1
-pydantic_core==2.18.2
-Pygments==2.19.1
-PyJWT==2.8.0
-pytest==8.4.0
-pytest-asyncio==1.0.0
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.9
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.31.0
-rich==14.0.0
-rich-toolkit==0.14.7
-rsa==4.9.1
-scikit-learn==1.7.0
-scipy==1.15.3
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.37.2
-tenacity==8.5.0
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tqdm==4.67.1
-typer==0.16.0
-typing-inspect==0.9.0
-typing_extensions==4.14.0
-ujson==5.10.0
-urllib3==2.4.0
-uvicorn==0.27.1
-uvloop==0.21.0
-watchfiles==1.0.5
-websockets==15.0.1
-yarl==1.20.1
+# Core Dependencies
+fastapi>=0.110.0,<1.0.0
+uvicorn[standard]>=0.27.0,<1.0.0
+python-dotenv>=1.0.0,<2.0.0
+python-multipart>=0.0.6,<1.0.0
+python-jose[cryptography]>=3.3.0,<4.0.0
+passlib[bcrypt]>=1.7.4,<2.0.0
+email-validator>=2.1.0,<3.0.0
+
+# Pydantic v2 Stack
+pydantic>=2.7.1,<3.0.0
+pydantic-settings>=2.2.1,<3.0.0
+pydantic-core>=2.18.2,<3.0.0
+pydantic-extra-types>=2.0.0,<3.0.0
+
+# AI/ML
+numpy>=1.26.0,<3.0.0
+pandas>=2.2.0,<3.0.0
+scikit-learn>=1.4.0,<2.0.0
+tiktoken>=0.7.0,<1.0.0
+tqdm>=4.66.0,<5.0.0
+sentence-transformers>=2.2.2,<3.0.0
+
+# LangChain (v0.2.x)
+langchain>=0.2.0,<0.3.0
+langchain-community>=0.2.0,<0.3.0
+langchain-core>=0.2.0,<0.3.0
+langchain-openai>=0.1.0,<0.2.0
+langchain-text-splitters>=0.2.0,<0.3.0
+
+# HTTP/API Clients
+httpx>=0.27.0,<1.0.0
+requests>=2.31.0,<3.0.0
+aiohttp>=3.9.0,<4.0.0
+python-jose[cryptography]>=3.3.0,<4.0.0
+yarl>=1.9.0,<2.0.0
+websockets>=12.0,<15.0.0  # Pinned for realtime compatibility
+
+# Utils
+anyio>=4.0.0,<5.0.0
+slowapi>=0.1.8,<0.2.0
+PyYAML>=6.0.0,<7.0.0
+regex>=2024.4.0,<2025.0.0
+rsa>=4.9.0,<5.0.0
+shellingham>=1.5.0,<2.0.0
+sniffio>=1.3.0,<2.0.0
+starlette>=0.37.0,<1.0.0
+tenacity>=8.2.0,<9.0.0
+typer>=0.9.0,<1.0.0
+typing-extensions>=4.9.0,<5.0.0
+ujson>=5.8.0,<6.0.0
+urllib3>=2.0.0,<3.0.0
+uvloop>=0.19.0,<1.0.0
+watchfiles>=1.0.0,<2.0.0
+orjson>=3.9.0,<4.0.0
+
+# Monitoring
+prometheus-client>=0.20.0,<1.0.0
+
+# Additional dependencies for Pydantic v2 compatibility
+email-validator>=2.1.0,<3.0.0
+python-multipart>=0.0.6,<1.0.0
