--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,62 +1,114 @@
-# Core Dependencies
-fastapi>=0.110.0,<1.0.0
-uvicorn[standard]>=0.27.0,<1.0.0
-python-dotenv>=1.0.0,<2.0.0
-python-multipart>=0.0.6,<1.0.0
-python-jose[cryptography]>=3.3.0,<4.0.0
-passlib[bcrypt]>=1.7.4,<2.0.0
-email-validator>=2.1.0,<3.0.0
+# Core Web Framework
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+python-multipart>=0.0.6
 
-# Pydantic v2 Stack
-pydantic>=2.7.1,<3.0.0
-pydantic-settings>=2.2.1,<3.0.0
-pydantic-core>=2.18.2,<3.0.0
-pydantic-extra-types>=2.0.0,<3.0.0
+# Rate Limiting
+slowapi>=0.1.9
 
-# AI/ML
-numpy>=1.26.0,<3.0.0
-pandas>=2.2.0,<3.0.0
-scikit-learn>=1.4.0,<2.0.0
-tiktoken>=0.7.0,<1.0.0
-tqdm>=4.66.0,<5.0.0
-sentence-transformers>=2.2.2,<3.0.0
+# Async and Networking
+anyio>=4.0.0
+aiohttp>=3.9.0
+httpx>=0.28.0
 
-# LangChain (v0.2.x)
-langchain>=0.2.0,<0.3.0
-langchain-community>=0.2.0,<0.3.0
-langchain-core>=0.2.0,<0.3.0
-langchain-openai>=0.1.0,<0.2.0
-langchain-text-splitters>=0.2.0,<0.3.0
+# Data Validation and Settings
+pydantic>=2.11.0
+pydantic-settings>=2.9.0
+pydantic-extra-types>=2.10.0
 
-# HTTP/API Clients
-httpx>=0.27.0,<1.0.0
-requests>=2.31.0,<3.0.0
-aiohttp>=3.9.0,<4.0.0
-python-jose[cryptography]>=3.3.0,<4.0.0
-yarl>=1.9.0,<2.0.0
-websockets>=12.0,<15.0.0  # Pinned for realtime compatibility
+# Environment and Configuration
+python-dotenv>=1.1.0
 
-# Utils
-anyio>=4.0.0,<5.0.0
-slowapi>=0.1.8,<0.2.0
-PyYAML>=6.0.0,<7.0.0
-regex>=2024.4.0,<2025.0.0
-rsa>=4.9.0,<5.0.0
-shellingham>=1.5.0,<2.0.0
-sniffio>=1.3.0,<2.0.0
-starlette>=0.37.0,<1.0.0
-tenacity>=8.2.0,<9.0.0
-typer>=0.9.0,<1.0.0
-typing-extensions>=4.9.0,<5.0.0
-ujson>=5.8.0,<6.0.0
-urllib3>=2.0.0,<3.0.0
-uvloop>=0.19.0,<1.0.0
-watchfiles>=1.0.0,<2.0.0
-orjson>=3.9.0,<4.0.0
+# LangChain Ecosystem (Latest Compatible Versions)
+langchain>=0.1.20
+langchain-core>=0.3.65
+langchain-community>=0.0.38
+langchain-groq>=0.3.2
+langchain-openai>=0.0.8
+langchain-text-splitters>=0.0.2
+langchain-hub
+langchain-anthropic
+langchain-experimental
+langchain-google-genai
+langchain-fireworks
+langchain-mistralai
+langchain-nomic
+langchain-together
+langchain-voyageai
+langchain-pinecone
+langchain-chroma
+langchain-elasticsearch
+langchain-qdrant
+langchain-weaviate
+langchain-astradb
+langchain-mongodb
+langchain-aws
+langchain-upstage
+langchain-zhipuai
+langchain-baidu-qianfan
+langchain-box
+langchain-clarifai
+langchain-cohere
+langchain-couchbase
+langchain-google-vertexai
+langchain-ibm
+langchain-milvus
+langchain-postgres
+langchain-robocorp
+langchain-exa
+langchain-google-community
+langchain-huggingface
+langchain-ollama
+langchain-nvidia-ai-endpoints
+langchain-yandex
+langchain-redis
+langchain-community[graph_vector_stores]
 
-# Monitoring
-prometheus-client>=0.20.0,<1.0.0
+# LLM Providers
+groq>=0.4.1
+openai>=1.88.0
 
-# Additional dependencies for Pydantic v2 compatibility
-email-validator>=2.1.0,<3.0.0
-python-multipart>=0.0.6,<1.0.0
+# AI/ML Libraries
+sentence-transformers>=2.7.0
+transformers>=4.52.0
+torch>=2.7.0
+numpy>=1.26.0
+
+# Database (Required for SQLAlchemy async)
+sqlalchemy>=2.0.0
+alembic>=1.12.0
+psycopg2-binary>=2.9.10
+greenlet>=3.0.0
+
+# Authentication and Security
+python-jose[cryptography]>=3.5.0
+passlib[bcrypt]>=1.7.4
+
+# Monitoring and Metrics
+prometheus-client>=0.22.0
+
+# HTTP Requests
+requests>=2.32.0
+
+# Testing
+pytest>=8.4.0
+pytest-asyncio>=1.0.0
+pytest-cov>=6.2.0
+pytest-mock>=3.14.0
+
+# Code Quality and Development
+black>=23.0.0
+isort>=6.0.0
+flake8>=6.0.0
+mypy>=1.16.0
+
+# Documentation
+mkdocs>=1.6.0
+mkdocs-material>=9.6.0
+mkdocstrings>=0.29.0
+mkdocstrings-python>=1.16.0
+
+# Utilities
+python-dateutil>=2.9.0
+tenacity>=8.5.0
+tiktoken>=0.9.0
