--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,106 +1,69 @@
+# Cleaned, aggressively minimized requirements.txt
+# Only keep packages that are directly imported or required for runtime, tests, or documented as essential.
+# If you encounter a runtime or import error, add the missing dependency back.
+
 # Core Web Framework
-fastapi>=0.110.0
-uvicorn[standard]>=0.27.0
-python-multipart>=0.0.6
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
 
 # Rate Limiting
-slowapi>=0.1.9
+slowapi==0.1.9
 
 # Async and Networking
-anyio>=4.0.0
+anyio>=3.7.1,<4.0.0
 aiohttp>=3.9.0
-httpx>=0.28.0
+httpx>=0.26,<0.29
 
 # Data Validation and Settings
-pydantic>=2.11.0
-pydantic-settings>=2.9.0
+pydantic>=2.5.2
+python-dotenv==1.0.0
 pydantic-extra-types>=2.10.0
 
-# Environment and Configuration
-python-dotenv>=1.1.0
+# Supabase Integration
+supabase>=2.15.3
 
-# LangChain Ecosystem (Latest Compatible Versions)
-langchain>=0.1.20
-langchain-core>=0.3.65
-langchain-community>=0.0.38
-langchain-groq>=0.3.2
-langchain-openai>=0.0.8
-langchain-text-splitters>=0.0.2
-langchain-hub
-langchain-anthropic
-langchain-experimental
-langchain-google-genai
-langchain-fireworks
-langchain-mistralai
-langchain-nomic
+# LangChain Ecosystem (core, openai, groq, together, community, text-splitters)
+langchain==0.1.16  # Compatible set for groq and openai
+langchain-core==0.1.42  # Minimum required for langchain 0.1.16
+langchain-openai==0.0.8  # Avoids LangSmithParams import error
+langchain-groq==0.1.0
 langchain-together
-langchain-voyageai
-langchain-pinecone
-langchain-chroma
-langchain-elasticsearch
-langchain-qdrant
-langchain-weaviate
-langchain-astradb
-langchain-mongodb
-langchain-aws
-langchain-upstage
-langchain-zhipuai
-langchain-baidu-qianfan
-langchain-box
-langchain-clarifai
-langchain-cohere
-langchain-couchbase
-langchain-google-vertexai
-langchain-ibm
-langchain-milvus
-langchain-postgres
-langchain-robocorp
-langchain-exa
-langchain-google-community
-langchain-huggingface
-langchain-ollama
-langchain-nvidia-ai-endpoints
-langchain-yandex
-langchain-redis
-langchain-community[graph_vector_stores]
+langchain-community
+langchain-text-splitters>=0.0.2
 
-# LLM Providers
-groq>=0.4.1
-openai>=1.88.0
-
-# AI/ML Libraries
-sentence-transformers>=2.7.0
-transformers>=4.52.0
-torch>=2.7.0
-numpy>=1.26.0
+# AI/ML Libraries (only those referenced)
+numpy>=1.26.4
 
 # Database (Required for SQLAlchemy async)
 sqlalchemy>=2.0.0
 alembic>=1.12.0
 psycopg2-binary>=2.9.10
 greenlet>=3.0.0
+asyncpg==0.29.0
 
 # Authentication and Security
-python-jose[cryptography]>=3.5.0
-passlib[bcrypt]>=1.7.4
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 
 # Monitoring and Metrics
-prometheus-client>=0.22.0
+prometheus-client==0.19.0
+structlog==23.2.0
 
 # HTTP Requests
-requests>=2.32.0
+requests==2.31.0
 
 # Testing
-pytest>=8.4.0
-pytest-asyncio>=1.0.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
 pytest-cov>=6.2.0
 pytest-mock>=3.14.0
 
 # Code Quality and Development
-black>=23.0.0
-isort>=6.0.0
-flake8>=6.0.0
-mypy>=1.16.0
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.7.1
 
 # Documentation
 mkdocs>=1.6.0
@@ -109,6 +72,28 @@ mkdocstrings>=0.29.0
 mkdocstrings-python>=1.16.0
 
 # Utilities
-python-dateutil>=2.9.0
+python-dateutil==2.8.2
 tenacity>=8.5.0
 tiktoken>=0.9.0
+pytz==2023.3
+
+# WebSocket support
+websockets==12.0
+
+# Voice/Audio (only SpeechRecognition, as referenced)
+SpeechRecognition==3.10.0
+
+# Analytics (core only)
+pandas==2.1.3
+matplotlib==3.8.2
+seaborn==0.13.0
+scikit-learn==1.3.2
+
+# Image processing (core only)
+Pillow==10.1.0
+
+# System monitoring (used in deploy_websocket.py)
+psutil==5.9.6
+
+# SSL (used in deploy_websocket.py)
+certifi==2023.11.17
